Improve video enrichments : + prevent embed type enrichments from overflowing video + display help texts in enrichment forms + move inline enrich types colors in css ansd use it on enrich table list + use card-headers class in each modification card in right side menu + error messages are now displayed with alert-warning class + some minor code styling

--- a/pod/enrichment/static/css/enrichment.css
+++ b/pod/enrichment/static/css/enrichment.css
@@ -30,11 +30,8 @@ table.scroll thead th {
 	white-space: nowrap;
 	line-height: 20px;
 }
-table.scroll thead th.enrich_title,
-table.scroll thead th.enrich_type,
-table.scroll thead th.enrich_start,
-table.scroll thead th.enrich_end {
-	white-space: nowrap;
+.enrich_type{
+	text-transform: capitalize;
 }
 #list_enrich .panel-heading,
 #form_enrich .panel-heading {
@@ -49,6 +46,14 @@ table.scroll thead th.enrich_end {
 form#form_enrich {
 	background-color: rgba(0, 0, 0, .05);
 }
+
+/* Enrich types colors */
+.enrich_image{color:var(--purple)}
+.enrich_document{color:var(--orange)}
+.enrich_richtext{color:var(--blue)}
+.enrich_weblink{color:var(--red)}
+.enrich_embed{color:var(--green)}
+
 /*
 #form_new,
 .video_back {
